Refactor supplied code and implement backend calls

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
+<mat-progress-bar
+  [style.visibility]="loading ? 'visible' : 'hidden'" [style.position]="'absolute'" color="accent" mode="indeterminate">
+</mat-progress-bar>
 <router-outlet></router-outlet>
