--- a/src/app/shared/smart-dropdown/smart-dropdown.component.html
+++ b/src/app/shared/smart-dropdown/smart-dropdown.component.html
@@ -1,9 +1,15 @@
-<button [ngClass]="{'text-white bg-blue is-opened': isOpen, 'text-blue': !isOpen, 'font-bold': selected.length > 0}"
+<button [ngClass]="
+        {
+          'text-white bg-blue is-opened': isOpen && !noBackground,
+          'text-blue': (!isOpen && !noBackground) || (selected.length === 1 && noBackground),
+          'dark:text-white': !isOpen && selected.length === 0 && noBackground,
+          'font-bold': selected.length > 0 && !noBackground
+        }"
         class="rounded uppercase text-sm leading-none px-3 py-2"
         cdkOverlayOrigin
         #trigger="cdkOverlayOrigin" (click)="toggleMenu()">
-  {{ title }}
-  <span *ngIf="selected.length">/ {{ selected.length }}</span>
+  {{ selectedTitle }}
+  <span *ngIf="selected.length && !singleItemMode">/ {{ selected.length }}</span>
   <fa-icon class="text-sm ml-3" [icon]="!isOpen ? faChevronDown : faChevronUp"></fa-icon>
 </button>
 
@@ -43,9 +49,20 @@
       <ng-container *ngFor="let item of filteredItems">
         <button (click)="toggleItem(item)" class="text-left text-sm mb-4 last:mb-0">
           <fa-icon [icon]="!item.selected ? faSquare : faSquareCheck"
-                   [ngClass]="{'text-blue': item.selected, 'text-lightgray': !item.selected}" class="mr-3"></fa-icon>
+                   [ngClass]="
+                    {
+                      'text-blue': item.selected,
+                      'text-lightgray': !item.selected
+                    }
+                    " class="mr-3">
+          </fa-icon>
           <span
-            [ngClass]="{'text-blue': item.selected, 'text-black dark:text-lightgray': !item.selected}">{{ item.label }}</span>
+            [ngClass]="
+              {
+                'text-blue': item.selected,
+                'text-black dark:text-lightgray': !item.selected,
+                'text-lightgray': isSelected(item)
+              }">{{ item.label }}</span>
         </button>
       </ng-container>
     </div>
