--- a/src/app/shared/link-card/link-card.component.html
+++ b/src/app/shared/link-card/link-card.component.html
@@ -15,15 +15,15 @@
         {{ link.description}}
       </p>
 
-      <div class="p-0" *ngIf="expanded">
+      <!-- <div class="p-0" *ngIf="expanded">
         <p>More ....</p>
-      </div>
+      </div> -->
     </div>
 
-    <button (click)="expanded = !expanded" class="text-darkgray dark:text-lightgray">
+    <!-- <button (click)="expanded = !expanded" class="text-darkgray dark:text-lightgray">
       <span class="sr-only">More</span>
       <fa-icon [icon]="faEllipsis"></fa-icon>
-    </button>
+    </button> -->
   </div>
 
   <hr class="border-lightgray dark:border-darkgray/60">
