--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="py-8 bg-blue dark:bg-marine bg-icon-blue dark:bg-icon-darkblue min-h-full flex flex-col">
+<div class="py-8 bg-darkblue-alt dark:bg-marine bg-icon-blue dark:bg-icon-darkblue min-h-full flex flex-col">
   <div class="container mx-auto flex-1 flex flex-col">
     <div class="flex flex-col justify-center items-center flex-1">
       <div class="w-96 max-w-full">
