--- a/src/app/shared/search-box/search-box.component.html
+++ b/src/app/shared/search-box/search-box.component.html
@@ -1,9 +1,10 @@
 <div
   [ngClass]="onHomeScreen ? 'shadow-xl bg-white' : 'shadow bg-white/60'"
   class="rounded-lg dark:bg-midnight/70">
-  <div [ngClass]="onHomeScreen ? 'py-4' : 'py-2'">
+  <div class="rounded-corners" [ngClass]="{'py-2': !onHomeScreen, 'py-4': onHomeScreen, 'bg-ice-blue ': !this.form.value.sourceLanguage}">
     <smart-dropdown
-          title="Language"
+          title="Choose Language"
+          [fullTriggerWidth]="onHomeScreen"
           searchPlaceholder="Search languages..."
           [(isOpen)]="isLanguagePickerOpen"
           [noBackground]="true"
@@ -11,7 +12,7 @@
           (change)="onLanguageChange($event)">
     </smart-dropdown>
   </div>
-  <form [formGroup]="form" (ngSubmit)="onSubmit()" [ngClass]="{'lg:flex lg:items-center': shrink}">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" [ngClass]="{'lg:flex lg:items-center': shrink, 'disabled': form.disabled}">
     <input type="hidden" formControlName="sourceLanguage">
     <hr class="border-lightgray dark:border-darkgray/60" [ngClass]="{'lg:hidden': shrink}">
 
