--- a/src/app/shared/search-result/search-result.component.html
+++ b/src/app/shared/search-result/search-result.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div>
-    <div class="bg-blue rounded-lg text-sm text-white p-3 mb-4" *ngIf="conceptView">
+    <div class="bg-blue rounded-lg text-sm text-white p-3 mb-4" *ngIf="conceptView && items?.concept">
       <ul class="flex">
         <li class="mr-2">ID {{items?.concept?.id}}</li>
         <li class="mr-2">/</li>
@@ -13,7 +13,7 @@
       </ul>
     </div>
 
-    <div [ngClass]="{'flex flex-col': true, 'lg:ml-6': conceptView}">
+    <div [ngClass]="{'flex flex-col': true, 'lg:ml-6': conceptView && items?.concept}">
       <link-card
         *ngFor="let link of items.target.slice(0, counter)"
         [link]="link">
