--- a/src/app/shared/smart-dropdown/smart-dropdown.component.html
+++ b/src/app/shared/smart-dropdown/smart-dropdown.component.html
@@ -1,15 +1,15 @@
 <button [ngClass]="
         {
           'text-white bg-blue is-opened': isOpen && !noBackground,
-          'text-blue': (!isOpen && !noBackground) || (selected.length === 1 && noBackground),
-          'dark:text-white': !isOpen && selected.length === 0 && noBackground,
-          'font-bold': selected.length > 0 && !noBackground
+          'text-blue': (!isOpen && !noBackground) || (selectedItems.length === 1 && noBackground),
+          'dark:text-white': !isOpen && selectedItems.length === 0 && noBackground,
+          'font-bold': selectedItems.length > 0 && !noBackground
         }"
         class="rounded uppercase text-sm leading-none px-3 py-2"
         cdkOverlayOrigin
         #trigger="cdkOverlayOrigin" (click)="toggleMenu()">
   {{ selectedTitle }}
-  <span *ngIf="selected.length && !singleItemMode">/ {{ selected.length }}</span>
+  <span *ngIf="selectedItems.length && !singleItemMode">/ {{ selectedItems.length }}</span>
   <fa-icon class="text-sm ml-3" [icon]="!isOpen ? faChevronDown : faChevronUp"></fa-icon>
 </button>
 
@@ -19,10 +19,11 @@
   [cdkConnectedOverlayHasBackdrop]="true"
   cdkConnectedOverlayBackdropClass="cdk-overlay-transparent-backdrop"
   [cdkConnectedOverlayOrigin]="trigger"
+  [cdkConnectedOverlayWidth]="triggerRect?.width!"
   [cdkConnectedOverlayOpen]="isOpen"
   [cdkConnectedOverlayOffsetY]=13
 >
-  <div class="smart-dropdown w-fit max-w-full shadow-xl rounded-b bg-white dark:bg-midnight">
+  <div class="smart-dropdown w-full shadow-xl rounded-b bg-white dark:bg-midnight">
     <div class="px-6 py-2 border-b border-lightgray dark:border-darkgray/60 relative">
       <div
         class="absolute text-sm text-lightgray pointer-events-none top-1/2 transform -translate-y-1/2">
@@ -36,8 +37,8 @@
     </div>
 
     <div class="border-b flex flex-row flex-wrap px-6 py-3 border-b border-lightgray dark:border-darkgray/60"
-         *ngIf="selected.length">
-      <ng-container *ngFor="let item of selected">
+         *ngIf="selectedItems.length && !singleItemMode">
+      <ng-container *ngFor="let item of selectedItems">
         <button class="text-blue text-xs mr-3" (click)="toggleItem(item)">
           {{item.label}}
           <fa-icon [icon]="faMarks" class="ml-1"></fa-icon>
@@ -48,7 +49,9 @@
     <div class="py-5 px-6 flex flex-col overflow-auto" style="max-height: 300px">
       <ng-container *ngFor="let item of filteredItems">
         <button (click)="toggleItem(item)" class="text-left text-sm mb-4 last:mb-0">
-          <fa-icon [icon]="!item.selected ? faSquare : faSquareCheck"
+          <fa-icon
+                   [icon]="!item.selected ? faSquare : faSquareCheck"
+                   [style.visibility]="singleItemMode ? 'hidden' : 'visible'"
                    [ngClass]="
                     {
                       'text-blue': item.selected,
