--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,4 +61,23 @@ html, body { height: 100%; }
   .bg-icon-darkblue {
     background-image: url("/assets/images/bg-icon-darkblue.svg");
   }
+
+  .bg-blue {
+    background-color: #004494!important;
+  }
+  button.bg-blue {
+    background-color: #004494;
+  }
+  .bg-darkblue-alt {
+    background-color: #004494!important;
+  }
+  button:disabled {
+    background-color: rgb(174 182 191 / 0.25)!important;
+}
+  .bg-ice-blue {
+    background-color: #e5ecf4!important;
+  }
+  input[type="text"] {
+    outline: none;
+  }
 }
